# restic

./: .pre-commit-config.yaml  pyproject.toml
examples/: json_placeholder.py
src/restic/: __init__.py  exceptions.py
src/restic/routes/: common.py  mixins.py
src/restic/utils/: urls.py
tests/: conftest.py  test_status_codes.py
tests/routes/mixins/: test_base_mixin.py  test_list_mixin.py  test_result_mixin.py  test_upload_mixin.py
tests/utils/: test_urls.py
